---
config:
  layout: elk
---
classDiagram
    class BaseModel {
        +UUID4 id
        +datetime created_at
        +datetime updated_at
        +save()
        +to_dict()
    }

    class User {
        +string email
        +string password
        +string first_name
        +string last_name
        +register()
        +login()
    }
    
    class Place {
        +string title
        +string description
        +float price                 
        +float latitude
        +float longitude
        +UUID4 owner_id
        +add_amenity()
        +update()
    }
    
    class Review {
        +string text
        +int rating
        +UUID4 user_id
        +UUID4 place_id
        +validate_rating()
        +submit()
    }
    
    class Amenity {
        +string name
        +string description
        +string icon_url
    }

    BaseModel <|-- User
    BaseModel <|-- Place
    BaseModel <|-- Review
    BaseModel <|-- Amenity

    User "1" --> "0..*" Place : owns
    User "1" --> "0..*" Review : writes
    Place "1" --> "0..*" Review : has
    Place "0..*" -- "0..*" Amenity : offers